# otbExternalFastFeaturesSelection

./: CMakeLists.txt  README  README.org  otb-module.cmake
app/: CMakeLists.txt  otbEmptyApp.cxx  otbPredictGMMApp.cxx  otbTrainGMMApp.cxx  otbTrainGMMSelectionApp.cxx
demo/: demo.sh
include/: otbGMMMachineLearningModel.h  otbGMMMachineLearningModel.txx  otbGMMSelectionMachineLearningModel.h  otbGMMSelectionMachineLearningModel.txx
src/: CMakeLists.txt  otbGMM.cxx
test/: CMakeLists.txt  otbFastFeatureSelectionTestDriver.cxx  testSaveLoad.cxx  testSelection.cxx
